testsuite/tests/qualifieddo/should_fail/qdofail003.stderr

qdofail003.hs:11:5: error: [GHC-76037]
    Not in scope: ‘P.>>’
    Suggested fix:
      Remove ‘>>’ from the explicit hiding list in the import of
      ‘Prelude’ (at qdofail003.hs:3:1-33).
